footer updated: missing components added from og

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,10 @@ code {
     monospace;
 }
 
+.line-height-lg{
+  line-height: 30px;
+}
+
 .optima-reg {
   font-family: "optima-reg", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
